--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -32,5 +32,4 @@ jobs:
     # Step 5: Deploy to server (local Docker deployment)
     - name: Deploy to local Docker
       run: |
-        docker tag flask-app localhost:5000/flask-app
-        docker push localhost:5000/flask-app
+        docker run -d -p 5000:5000 flask-app
