--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -30,6 +30,7 @@ jobs:
         curl -f http://localhost:5000
 
     # Step 5: Deploy to server (local Docker deployment)
-    - name: Deploy to local Docker
+    - name: Deploy to Docker Hub (or local Docker registry)
       run: |
-        docker run -d -p 5000:5000 flask-app
+        docker tag flask-app meghanamurthyy/flask-app:latest  # Tag the image (replace 'myusername' with your Docker Hub username)
+        docker push meghanamurthyy/flask-app:latest 
