--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -18,23 +18,27 @@ jobs:
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
-    # Step 3: Build the Docker image
+    # Step 3: Log in to Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # Step 4: Build the Docker image
     - name: Build the Docker image
       run: |
         docker build -t flask-app .
 
-    # Step 4: Run container tests (optional)
+    # Step 5: Test container (optional)
     - name: Test container
       run: |
-        docker run -d -p 6666:5000 flask-app
+        docker run -d -p 5000:5000 flask-app
         sleep 10
-        curl -f http://localhost:6666
+        curl -f http://localhost:5000
 
-    # Step 5: Deploy to server (local Docker deployment)
-    - name: Deploy to Docker Hub (or local Docker registry)
+    # Step 6: Tag and push the image to Docker Hub
+    - name: Tag and push to Docker Hub
       run: |
-        docker tag flask-app meghanamurthyy/flask-app:latest  # Tag the image (replace 'myusername' with your Docker Hub username)
-        docker push meghanamurthyy/flask-app:latest 
-
-    
-
+        docker tag flask-app meghanamurthyy/flask-app:latest
+        docker push meghanamurthyy/flask-app:latest
